--- a/Desktop/bacs/tutorial-env/requirements.txt
+++ b/Desktop/bacs/tutorial-env/requirements.txt
@@ -1,19 +1,17 @@
-click==8.1.3
-colorama==0.4.5
-Flask
+Flask==0.11.1
+passlib==1.7.0
+SQLAlchemy==1.1.5
+Werkzeug==0.11.15
+gunicorn==19.0.0
+gevent==1.2.1
 flask-marshmallow==0.14.0
 Flask-SQLAlchemy==2.5.1
-greenlet==1.1.2
-gunicorn
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.1
 marshmallow==3.17.0
 marshmallow-sqlalchemy==0.28.1
 packaging==21.3
 PyMySQL==1.0.2
-pyparsing==3.0.9
-six==1.16.0
 SQLAlchemy==1.4.39
 Werkzeug==2.2.1
 mysql-connector-python
