--- a/Desktop/bacs/tutorial-env/requirements.txt
+++ b/Desktop/bacs/tutorial-env/requirements.txt
@@ -1,19 +1,19 @@
-Flask==0.11.1
-passlib==1.7.0
-SQLAlchemy==1.1.5
-Werkzeug==0.11.15
-gunicorn==19.0.0
-gevent==1.2.1
-flask-marshmallow==0.14.0
-Flask-SQLAlchemy==2.5.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-marshmallow==3.17.0
-marshmallow-sqlalchemy==0.28.1
-packaging==21.3
-PyMySQL==1.0.2
-SQLAlchemy==1.1.5
-Werkzeug==0.11.15
+Flask
+passlib
+SQLAlchemy
+Werkzeug
+gunicorn
+gevent
+flask-marshmallow0
+Flask-SQLAlchemy
+itsdangerous
+Jinja2
+marshmallow
+marshmallow-sqlalchemy
+packaging
+PyMySQL
+SQLAlchemy
+Werkzeug
 mysql-connector-python
 mysqlclient
 
